# stage_joris

./: .gitignore  All_Class_Classifications.py  Audioclassificatie_BEATs.py  Audioclassificatie_Google_Live.py  Audioclassificatie_google_files.py  Audioclassificatie_google_files_ava_prob.py  Audioclassificatie_google_test.py  BSD_f_Beats.xlsx  BSD_nf.xlsx  BSD_nf_Beats.xlsx  Calibration_audio_creator.py  ConfusionMatrix.py  ConfusionMatrixBSD.py  Depth_mapping_Mediapipe.json  Depth_mapping_Mediapipe.py  ESC10_f_Beats.xlsx  ESC10_f_avg.xlsx  ESC10_f_max.xlsx  ESC10_nf_Beats.xlsx  ESC10_nf_avg.xlsx  ESC10_nf_max.xlsx  IDMT.xlsx  IDMT_Categorized.xlsx  IDMT_Class_Writer.py  Leq_Wavs_Filter.py  Leq_calculator.py  Low_pass_test.py  Peak_Counter.py  Recording.py  Sound_Detection_1.py  Sound_Detection_Testing.py  Test_filtering.py  VTSD_f.xlsx  VTSD_f_Beats.xlsx  VTSD_f_avg.xlsx  VTSD_f_max.xlsx  VTSD_nf_Beats.xlsx  VTSD_nf_avg.xlsx  VTSD_nf_max.xlsx  VTSD_sf.xlsx  (+14 more)
Audioclassification/: Audioclassificatie_Average_Method.py  Audioclassificatie_Google_Live.py  Audioclassificatie_Maximum_Method.py
Depth_Mapping_Mediapipe_trees/: class_hierarchy_tree_1  class_hierarchy_tree_2  class_hierarchy_tree_3  class_hierarchy_tree_4  class_hierarchy_tree_5  class_hierarchy_tree_6  class_hierarchy_tree_7
