[project]
name = "stage-joris"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib (>=3.10.0,<4.0.0)",
    "mediapipe (>=0.10.20,<0.11.0)",
    "requests (>=2.32.3,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "ipython (>=8.32.0,<9.0.0)",
    "tokenizers (>=0.21.0,<0.22.0)",
    "datasets (>=3.2.0,<4.0.0)",
    "transformers (>=4.48.2,<5.0.0)",
    "torch (>=2.6.0,<3.0.0)",
    "torchaudio (>=2.6.0,<3.0.0)",
    "sounddevice (>=0.5.1,<0.6.0)",
    "pyaudio (>=0.2.14,<0.3.0)",
    "soundfile (>=0.13.1,<0.14.0)",
    "graphviz (>=0.20.3,<0.21.0)",
    "ffmpeg (>=1.4,<2.0)",
    "pydub (>=0.25.1,<0.26.0)",
    "wave (>=0.0.2,<0.0.3)",
    "counter (>=1.0.0,<2.0.0)",
    "librosa (>=0.10.2.post1,<0.11.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "statsmodels (>=0.14.4,<0.15.0)",
    "noisereduce (>=3.0.3,<4.0.0)",
    "moviepy (>=2.1.2,<3.0.0)",
    "numpy (>=1.26,<2.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
